synapse/base/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`goatchat.ca`)
    kind: Rule
    services:
    - name: synapse
      port: 8008
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-fed
  namespace: default
spec:
  entryPoints:
    - synapse-federation
  routes:
  - match: Host(`goatchat.ca`)
    kind: Rule
    services:
    - name: synapse
      port: 8448
  tls:
    certResolver: letsencrypt
